Update 0417-pacific-atlantic-water-flow.java
List.of is generally recommended over Arrays.asList
because of the former gives immutable (a copy of the list)
https://www.baeldung.com/java-arrays-aslist-vs-list-of#1-differences-from-arraysaslist